* Improvement: De-enqueued `theme.js`, no longer needed with framework 2.6+.
* Improvement: When page title is hidden on full-width or full-screen featured image, image is now 100% opacity.
* Improvement: Removed dark form field styling when in an area with a dark background color; it causes messy CSS and too many plugin conflicts.
* Fixed: Footer columns not pulling page content.
* Fixed: Post showcase filtering not correctly effecting corresponding lightbox gallery.
* Fixed: Time ago date formatting not calculated correctly when time zone changed from GMT-0.
* Fixed: Self-hosted background video not looping in some browsers.
* Fixed: Titles not showing below lightbox video popups.
* Fixed: Redirect page template not redirecting properly.
* Fixed: Bug with `h2` HTML tag font styling on mobile.
* Fixed: Bug with self-hosted WordPress videos not displaying after full-screen exit in some browsers.
* Fixed: Header toolbar divider not matching header height with all logo sizes on "Agent" base.

--------------------------------------------------------------

2.1.0 - 05/05/2016
------------------

*Warning: Make sure to read this article before updating: [Updating to Jump Start 2.1](http://news.themeblvd.com/2016/05/05/updating-to-jump-start-2-1/)*

* **Updated Theme Blvd framework to 2.6.0**
* New: "Agent" theme base - A modern and open, agency-style design with a bit less user options.
* New: 5 new demos - [Demo #1](http://demoblvd.com/themes/jumpstart-2/demo-1), [Demo #8](http://demoblvd.com/themes/jumpstart-2/demo-8), [Demo #9](http://demoblvd.com/themes/jumpstart-2/demo-9), [Demo #10](http://demoblvd.com/themes/jumpstart-2/demo-10), and [Developer Demo](http://demoblvd.com/themes/jumpstart-2/demo-dev).
* New: Theme welcome message that leads user to the [framework overview video](https://vimeo.com/124567552) when activating the theme.
* New: Featured media above page and post content.