@@ -457,17 +457,30 @@ body.woocommerce-cart .header-top-nav .tb-cart-trigger {
 .tb-primary-menu ul.non-mega-sub-menu,
 .tb-primary-menu .sf-mega {
 	background: #ffffff;
+	-webkit-box-shadow: 0 2px 5px rgba(0,0,0,.05);
+	box-shadow: 0 2px 5px rgba(0,0,0,.05);
+}
+.tb-primary-menu ul.non-mega-sub-menu,
+.tb-primary-menu .sf-mega-section {
+	padding: 10px 18px;
 }
 .tb-primary-menu ul.sub-menu .menu-btn,
 .tb-primary-menu .mega-section-header {
 	color: #666666;
-	color: rgba(26,26,26,.7);
-	font-size: 13px;
+	color: rgba(34,34,34,.5);
+	font-size: 12px;
 	line-height: 1.3;
-	padding: .77em .92em;
+	padding: .77em 0;
 }
-.tb-primary-menu ul.sub-menu a:hover {
-	background: #f5f5f5;
+.tb-primary-menu .mega-section-header,
+.tb-primary-menu ul.sub-menu .menu-btn:hover {
+	background-color: transparent;
+	color: #333333;
+}
+
+/* Menu: Level 3 */
+.sf-menu ul.non-mega-sub-menu ul {
+	margin: 0 18px; /* offset previous level padding, either direction */
 }
 
 /* Sticky Menu */
