@@ -349,37 +349,28 @@ body {
 }
 
 /* Menu: Level 2+ */
-.tb-primary-menu ul.non-mega-sub-menu,
-.tb-primary-menu .sf-mega {
-	background: #1b1b1b;
+.drop-dark .tb-primary-menu ul.non-mega-sub-menu,
+.drop-dark .tb-primary-menu .sf-mega {
+	-webkit-box-shadow: none;
+	box-shadow: none;
 }
-.tb-primary-menu ul.non-mega-sub-menu,
-.tb-primary-menu .sf-mega-section {
-	padding: 10px 18px;
-}
-.tb-primary-menu ul.sub-menu .menu-btn,
-.tb-primary-menu .mega-section-header {
-	color: #ffffff;
+.drop-dark .tb-primary-menu ul.sub-menu .menu-btn,
+.drop-dark .tb-primary-menu .mega-section-header {
+	color: #cccccc;
 	color: rgba(255,255,255,.85);
-	font-size: 12px;
-	line-height: 1.3;
-	padding: .77em 0;
 }
-.tb-primary-menu ul.sub-menu .menu-btn:hover {
-	background-color: transparent;
+.drop-dark .tb-primary-menu .mega-section-header,
+.drop-dark .tb-primary-menu ul.sub-menu .menu-btn:hover {
 	color: #ffffff;
 }
 .drop-light .tb-primary-menu ul.sub-menu .menu-btn,
 .drop-light .tb-primary-menu .mega-section-header {
+	color: #666666;
 	color: rgba(34,34,34,.5);
 }
+.drop-light .tb-primary-menu .mega-section-header,
 .drop-light .tb-primary-menu ul.sub-menu .menu-btn:hover {
 	color: #222222;
-}
-
-/* Menu: Level 3 */
-.sf-menu ul.non-mega-sub-menu ul {
-	margin: 0 18px; /* offset previous level padding, either direction */
 }
 
 /* Highlighted Menu Items */
